deploy: 221d53cfd1a66c25402130a8ef7658ee221de1e9

--- a/genindex.html
+++ b/genindex.html
@@ -450,6 +450,10 @@
   <h2>R</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/sargeom.coordinates.Cartesian3.html#sargeom.coordinates.Cartesian3.reject_from">reject_from() (sargeom.coordinates.Cartesian3 method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/sargeom.coordinates.CartesianLocalENU.html#sargeom.coordinates.CartesianLocalENU.rotation">rotation (sargeom.coordinates.CartesianLocalENU attribute)</a>
 
         <ul>
