--- a/genindex.html
+++ b/genindex.html
@@ -319,7 +319,7 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/sargeom.coordinates.Cartographic.html#sargeom.coordinates.Cartographic.dms_to_dd">dms_to_dd() (sargeom.coordinates.Cartographic static method)</a>
 </li>
-        <li><a href="api/sargeom.coordinates.Cartesian3.html#sargeom.coordinates.Cartesian3.dot">dot() (sargeom.coordinates.Cartesian3 static method)</a>
+        <li><a href="api/sargeom.coordinates.Cartesian3.html#sargeom.coordinates.Cartesian3.dot">dot() (sargeom.coordinates.Cartesian3 method)</a>
 </li>
     </ul></td>
   </tr></table>
