--- a/genindex.html
+++ b/genindex.html
@@ -299,6 +299,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="api/sargeom.coordinates.Cartographic.html#sargeom.coordinates.Cartographic">Cartographic (class in sargeom.coordinates)</a>
 </li>
+        <li><a href="api/sargeom.coordinates.Cartesian3.html#sargeom.coordinates.Cartesian3.centroid">centroid() (sargeom.coordinates.Cartesian3 method)</a>
+</li>
         <li><a href="api/sargeom.coordinates.Cartesian3.html#sargeom.coordinates.Cartesian3.cross">cross() (sargeom.coordinates.Cartesian3 method)</a>
 </li>
         <li><a href="api/sargeom.coordinates.CartesianECEF.html#sargeom.coordinates.CartesianECEF.crs">crs() (sargeom.coordinates.CartesianECEF static method)</a>
