--- a/_modules/sargeom/coordinates.html
+++ b/_modules/sargeom/coordinates.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../genindex.html" /><link rel="search" title="Search" href="../../search.html" />
 
     <!-- Generated with Sphinx 8.1.3 and Furo 2024.08.06 -->
-        <title>sargeom.coordinates - SARGeom</title>
+        <title>sargeom.coordinates - sargeom</title>
       <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="../../_static/styles/furo.css?v=354aac6f" />
     <link rel="stylesheet" type="text/css" href="../../_static/tabs.css?v=4c969af8" />
@@ -169,7 +169,7 @@
       </label>
     </div>
     <div class="header-center">
-      <a href="../../index.html"><div class="brand">SARGeom</div></a>
+      <a href="../../index.html"><div class="brand">sargeom</div></a>
     </div>
     <div class="header-right">
       <div class="theme-toggle-container theme-toggle-header">
@@ -193,7 +193,7 @@
       <div class="sidebar-sticky"><a class="sidebar-brand" href="../../index.html">
   
   
-  <span class="sidebar-brand-text">SARGeom</span>
+  <span class="sidebar-brand-text">sargeom</span>
   
 </a><form class="sidebar-search-container" method="get" action="../../search.html" role="search">
   <input class="sidebar-search" placeholder="Search" name="q" aria-label="Search">
@@ -2596,31 +2596,77 @@
 <span class="sd">        --------</span>
 <span class="sd">        &gt;&gt;&gt; position = Cartographic(longitude=10.0, latitude=20.0, height=30.0)</span>
 <span class="sd">        &gt;&gt;&gt; position.to_geojson()</span>
-<span class="sd">        {&quot;coordinates&quot;: [10.0, 20.0, 30.0], &quot;type&quot;: &quot;Point&quot;}</span>
+<span class="sd">        {&#39;coordinates&#39;: [10.0, 20.0, 30.0], &#39;type&#39;: &#39;Point&#39;}</span>
+<span class="sd">        &gt;&gt;&gt; positions = Cartographic(longitude=[10.0, 15.0, 20.0], latitude=[20.0, 25.0, 30.0], height=[30.0, 35.0, 40.0])</span>
+<span class="sd">        &gt;&gt;&gt; positions.to_geojson()</span>
+<span class="sd">        {&#39;coordinates&#39;: [[10.0, 20.0, 30.0], [15.0, 25.0, 35.0], [20.0, 30.0, 40.0]], &#39;type&#39;: &#39;MultiPoint&#39;}</span>
+<span class="sd">        &gt;&gt;&gt; positions.to_geojson(clamp_to_Ground=True, link_markers=True)</span>
+<span class="sd">        {&#39;coordinates&#39;: [[10.0, 20.0], [15.0, 25.0], [20.0, 30.0]], &#39;type&#39;: &#39;LineString&#39;}</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">try</span><span class="p">:</span>
-            <span class="kn">from</span><span class="w"> </span><span class="nn">geojson</span><span class="w"> </span><span class="kn">import</span> <span class="n">Point</span><span class="p">,</span> <span class="n">MultiPoint</span><span class="p">,</span> <span class="n">LineString</span><span class="p">,</span> <span class="n">Polygon</span>
-        <span class="k">except</span> <span class="ne">ModuleNotFoundError</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">ModuleNotFoundError</span><span class="p">(</span>
-                <span class="s2">&quot;GeoJSON is not installed. Please follow the instructions on https://geojson.readthedocs.io/en/latest/index.html#installation&quot;</span>
-            <span class="p">)</span>
-
-        <span class="k">if</span> <span class="n">clamp_to_Ground</span><span class="p">:</span>
-            <span class="n">coords</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">longitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">latitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">()]</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="n">coords</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">longitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">latitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">height</span><span class="o">.</span><span class="n">tolist</span><span class="p">()]</span>
+        <span class="n">coords</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">()[:,</span> <span class="p">:</span><span class="mi">2</span><span class="p">]</span>  <span class="k">if</span> <span class="n">clamp_to_Ground</span> <span class="k">else</span> <span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">()</span>
+        <span class="n">coords</span> <span class="o">=</span> <span class="n">coords</span><span class="o">.</span><span class="n">squeeze</span><span class="p">()</span><span class="o">.</span><span class="n">tolist</span><span class="p">()</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_collection</span><span class="p">():</span>
             <span class="k">if</span> <span class="n">link_markers</span><span class="p">:</span>
-                <span class="c1"># Check if the list of coordinates is cyclic for linking markers with a Polygon or a LineString</span>
                 <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">all</span><span class="p">(</span><span class="n">coords</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="n">coords</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]):</span>
-                    <span class="k">return</span> <span class="n">Polygon</span><span class="p">([</span><span class="n">coords</span><span class="p">])</span>
+                    <span class="k">return</span> <span class="p">{</span><span class="s2">&quot;coordinates&quot;</span><span class="p">:</span> <span class="p">[</span><span class="n">coords</span><span class="p">],</span> <span class="s2">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;Polygon&quot;</span><span class="p">}</span>
                 <span class="k">else</span><span class="p">:</span>
-                    <span class="k">return</span> <span class="n">LineString</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span>
+                    <span class="k">return</span> <span class="p">{</span><span class="s2">&quot;coordinates&quot;</span><span class="p">:</span> <span class="n">coords</span><span class="p">,</span> <span class="s2">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;LineString&quot;</span><span class="p">}</span>
             <span class="k">else</span><span class="p">:</span>
-                <span class="k">return</span> <span class="n">MultiPoint</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span>
+                <span class="k">return</span> <span class="p">{</span><span class="s2">&quot;coordinates&quot;</span><span class="p">:</span> <span class="n">coords</span><span class="p">,</span> <span class="s2">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;MultiPoint&quot;</span><span class="p">}</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="k">return</span> <span class="n">Point</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span></div>
+            <span class="k">return</span> <span class="p">{</span><span class="s2">&quot;coordinates&quot;</span><span class="p">:</span> <span class="n">coords</span><span class="p">,</span> <span class="s2">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;Point&quot;</span><span class="p">}</span></div>
+
+
+<div class="viewcode-block" id="Cartographic.to_trajviewer">
+<a class="viewcode-back" href="../../api/sargeom.coordinates.Cartographic.html#sargeom.coordinates.Cartographic.to_trajviewer">[docs]</a>
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_trajviewer</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">description</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">clamp_to_Ground</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">link_markers</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">url</span><span class="o">=</span><span class="s2">&quot;https://oleveque.github.io/trajviewer&quot;</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Open the Cartographic instance in the TrajViewer web application.</span>
+
+<span class="sd">        Parameters</span>
+<span class="sd">        ----------</span>
+<span class="sd">        name : :class:`str`, optional</span>
+<span class="sd">            The name of the Cartographic instance. Default is None.</span>
+<span class="sd">        description : :class:`str`, optional</span>
+<span class="sd">            The description of the Cartographic instance. Default is None.</span>
+<span class="sd">        clamp_to_Ground : :class:`bool`, optional</span>
+<span class="sd">            If True, clamp positions to the ground. Default is False.</span>
+<span class="sd">        link_markers : :class:`bool`, optional</span>
+<span class="sd">            If True, link markers with a line. Default is False.</span>
+<span class="sd">        url : :class:`str`, optional</span>
+<span class="sd">            The URL of the TrajViewer web application. Default is &quot;https://oleveque.github.io/trajviewer&quot;.</span>
+
+<span class="sd">        Notes</span>
+<span class="sd">        -----</span>
+<span class="sd">        TrajViewer is a web-based application for visualizing spatial data, such as trajectories, locations, and raster files.</span>
+<span class="sd">        For more information, visit the GitHub repository: https://github.com/oleveque/trajviewer</span>
+<span class="sd">        &quot;&quot;&quot;</span>
+        <span class="kn">import</span><span class="w"> </span><span class="nn">json</span>
+        <span class="kn">import</span><span class="w"> </span><span class="nn">base64</span>
+        <span class="kn">import</span><span class="w"> </span><span class="nn">urllib.parse</span>
+        <span class="kn">import</span><span class="w"> </span><span class="nn">webbrowser</span>
+        
+        <span class="c1"># Convert the Cartographic instance to GeoJSON format</span>
+        <span class="n">geometry</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">to_geojson</span><span class="p">(</span><span class="n">clamp_to_Ground</span><span class="o">=</span><span class="n">clamp_to_Ground</span><span class="p">,</span> <span class="n">link_markers</span><span class="o">=</span><span class="n">link_markers</span><span class="p">)</span>
+
+        <span class="c1"># Create a GeoJSON Feature with the provided name and description</span>
+        <span class="n">geojson</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s2">&quot;type&quot;</span><span class="p">:</span> <span class="s2">&quot;Feature&quot;</span><span class="p">,</span>
+            <span class="s2">&quot;geometry&quot;</span><span class="p">:</span> <span class="n">geometry</span><span class="p">,</span>
+            <span class="s2">&quot;properties&quot;</span><span class="p">:</span> <span class="p">{</span>
+                <span class="s2">&quot;name&quot;</span><span class="p">:</span> <span class="n">name</span><span class="p">,</span>
+                <span class="s2">&quot;description&quot;</span><span class="p">:</span> <span class="n">description</span>
+            <span class="p">}</span>
+        <span class="p">}</span>
+
+        <span class="c1"># Convert the GeoJSON Feature to a string and encode it in base64</span>
+        <span class="n">geojson_str</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">dumps</span><span class="p">(</span><span class="n">geojson</span><span class="p">,</span> <span class="n">separators</span><span class="o">=</span><span class="p">(</span><span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="s1">&#39;:&#39;</span><span class="p">))</span>
+        <span class="n">geojson_b64</span> <span class="o">=</span> <span class="n">base64</span><span class="o">.</span><span class="n">b64encode</span><span class="p">(</span><span class="n">geojson_str</span><span class="o">.</span><span class="n">encode</span><span class="p">(</span><span class="s1">&#39;utf-8&#39;</span><span class="p">))</span><span class="o">.</span><span class="n">decode</span><span class="p">(</span><span class="s1">&#39;ascii&#39;</span><span class="p">)</span>
+        <span class="n">geojson_enc</span> <span class="o">=</span> <span class="n">urllib</span><span class="o">.</span><span class="n">parse</span><span class="o">.</span><span class="n">quote</span><span class="p">(</span><span class="n">geojson_b64</span><span class="p">)</span>
+
+        <span class="c1"># Open the TrajViewer web application with the encoded GeoJSON data</span>
+        <span class="n">webbrowser</span><span class="o">.</span><span class="n">open</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">url</span><span class="si">}</span><span class="s2">?geojsonData=</span><span class="si">{</span><span class="n">geojson_enc</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="Cartographic.to_shapely">
@@ -2654,6 +2700,11 @@
 <span class="sd">        &gt;&gt;&gt; position = Cartographic(longitude=10.0, latitude=20.0, height=30.0)</span>
 <span class="sd">        &gt;&gt;&gt; position.to_shapely()</span>
 <span class="sd">        &lt;POINT Z (10 20 30)&gt;</span>
+<span class="sd">        &gt;&gt;&gt; positions = Cartographic(longitude=[10.0, 15.0, 20.0], latitude=[20.0, 25.0, 30.0], height=[30.0, 35.0, 40.0])</span>
+<span class="sd">        &gt;&gt;&gt; positions.to_shapely()</span>
+<span class="sd">        &lt;MULTIPOINT Z ((10 20 30), (15 25 35), (20 30 40))&gt;</span>
+<span class="sd">        &gt;&gt;&gt; positions.to_shapely(clamp_to_Ground=True, link_markers=True)</span>
+<span class="sd">        &lt;LINESTRING (10 20, 15 25, 20 30)&gt;</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="kn">from</span><span class="w"> </span><span class="nn">shapely</span><span class="w"> </span><span class="kn">import</span> <span class="n">Point</span><span class="p">,</span> <span class="n">MultiPoint</span><span class="p">,</span> <span class="n">LineString</span><span class="p">,</span> <span class="n">Polygon</span>
@@ -2662,18 +2713,12 @@
                 <span class="s2">&quot;Shapely is not installed. Please follow the instructions on https://shapely.readthedocs.io/en/stable/installation.html&quot;</span>
             <span class="p">)</span>
 
-        <span class="k">if</span> <span class="n">clamp_to_Ground</span><span class="p">:</span>
-            <span class="n">coords</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">longitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">latitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">()]</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="n">coords</span> <span class="o">=</span> <span class="p">[</span><span class="bp">self</span><span class="o">.</span><span class="n">longitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">latitude</span><span class="o">.</span><span class="n">tolist</span><span class="p">(),</span> <span class="bp">self</span><span class="o">.</span><span class="n">height</span><span class="o">.</span><span class="n">tolist</span><span class="p">()]</span>
+        <span class="n">coords</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">()[:,</span> <span class="p">:</span><span class="mi">2</span><span class="p">]</span>  <span class="k">if</span> <span class="n">clamp_to_Ground</span> <span class="k">else</span> <span class="bp">self</span><span class="o">.</span><span class="n">__array__</span><span class="p">()</span>
+        <span class="n">coords</span> <span class="o">=</span> <span class="n">coords</span><span class="o">.</span><span class="n">squeeze</span><span class="p">()</span><span class="o">.</span><span class="n">tolist</span><span class="p">()</span>
 
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_collection</span><span class="p">():</span>
             <span class="k">if</span> <span class="n">link_markers</span><span class="p">:</span>
-                <span class="c1"># Check if the list of coordinates is cyclic for linking markers with a Polygon or a LineString</span>
-                <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">all</span><span class="p">(</span><span class="n">coords</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="n">coords</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]):</span>
-                    <span class="k">return</span> <span class="n">Polygon</span><span class="p">([</span><span class="n">coords</span><span class="p">])</span>
-                <span class="k">else</span><span class="p">:</span>
-                    <span class="k">return</span> <span class="n">LineString</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span>
+                <span class="k">return</span> <span class="n">Polygon</span><span class="p">([</span><span class="n">coords</span><span class="p">])</span> <span class="k">if</span> <span class="n">np</span><span class="o">.</span><span class="n">all</span><span class="p">(</span><span class="n">coords</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> <span class="o">==</span> <span class="n">coords</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">])</span> <span class="k">else</span> <span class="n">LineString</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span>
             <span class="k">else</span><span class="p">:</span>
                 <span class="k">return</span> <span class="n">MultiPoint</span><span class="p">(</span><span class="n">coords</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
